--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,15 @@
   <modelVersion>4.0.0</modelVersion>
   <modules>
     <module>javabase</module>
+    <module>pattern</module>
+    <module>concurrency</module>
+    <module>guavaDrill</module>
   </modules>
 
 
   <groupId>kincolle</groupId>
   <artifactId>javadrill</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>javadrill</name>
@@ -26,6 +29,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
