--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -47,6 +47,14 @@
             <version>3.0.9.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
