--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
       <!--<groupId>org.junit.platform</groupId>-->
       <!--<artifactId>junit-platform-runner</artifactId>-->
       <!--<version>${junit.platform.version}</version>-->
-      <!--<scope>test</scope>-->
+      <!--<scope>first.test</scope>-->
     <!--</dependency>-->
 
     <!-- https://mvnrepository.com/artifact/junit/junit -->
