--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -40,6 +40,15 @@
             <version>5.0.7.RELEASE</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.13</version>
+        </dependency>
+
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-expression</artifactId>
@@ -75,12 +84,7 @@
             <version>3.0.9.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-first.test -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-first.test</artifactId>
-            <version>5.0.7.RELEASE</version>
-        </dependency>
+
 
 
 
