--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <module>guavaDrill</module>
       <module>spring</module>
       <module>algorithm</module>
+      <module>nettydrill</module>
   </modules>
 
 
