--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
       <module>spring</module>
       <module>algorithm</module>
       <module>nettydrill</module>
+    <module>search</module>
   </modules>
 
 
